@@ -23,6 +23,7 @@ import static org.mockito.Mockito.mock;
 import java.io.IOException;
 import java.lang.reflect.UndeclaredThrowableException;
 import java.net.InetSocketAddress;
+import java.nio.ByteBuffer;
 import java.util.Map;
 import java.util.concurrent.ThreadPoolExecutor;
 import java.util.concurrent.atomic.AtomicInteger;
@@ -32,6 +33,7 @@ import junit.framework.Assert;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
+import org.apache.hadoop.fs.CommonConfigurationKeysPublic;
 import org.apache.hadoop.ipc.Server;
 import org.apache.hadoop.mapreduce.MRJobConfig;
 import org.apache.hadoop.mapreduce.v2.api.records.JobId;
@@ -61,6 +63,7 @@ import org.apache.hadoop.yarn.api.records.ApplicationId;
 import org.apache.hadoop.yarn.api.records.ContainerId;
 import org.apache.hadoop.yarn.api.records.ContainerState;
 import org.apache.hadoop.yarn.api.records.ContainerStatus;
+import org.apache.hadoop.yarn.api.records.NodeId;
 import org.apache.hadoop.yarn.api.records.Token;
 import org.apache.hadoop.yarn.client.api.impl.ContainerManagementProtocolProxy;
 import org.apache.hadoop.yarn.client.api.impl.ContainerManagementProtocolProxy.ContainerManagementProtocolProxyData;
@@ -70,7 +73,9 @@ import org.apache.hadoop.yarn.factory.providers.RecordFactoryProvider;
 import org.apache.hadoop.yarn.ipc.HadoopYarnProtoRPC;
 import org.apache.hadoop.yarn.ipc.YarnRPC;
 import org.apache.hadoop.yarn.security.ContainerTokenIdentifier;
-import org.apache.hadoop.yarn.security.NMTokenIdentifier;
+import org.apache.hadoop.yarn.server.api.records.MasterKey;
+import org.apache.hadoop.yarn.server.nodemanager.security.NMTokenSecretManagerInNM;
+import org.apache.hadoop.yarn.util.Records;
 import org.junit.Test;
 
 public class TestContainerLauncher {
@@ -82,7 +87,7 @@ public class TestContainerLauncher {
 
   static final Log LOG = LogFactory.getLog(TestContainerLauncher.class);
 
-  @Test
+  @Test (timeout = 5000)
   public void testPoolSize() throws InterruptedException {
 
     ApplicationId appId = ApplicationId.newInstance(12345, 67);
@@ -158,7 +163,7 @@ public class TestContainerLauncher {
     containerLauncher.stop();
   }
 
-  @Test
+  @Test(timeout = 5000)
   public void testPoolLimits() throws InterruptedException {
     ApplicationId appId = ApplicationId.newInstance(12345, 67);
     ApplicationAttemptId appAttemptId = ApplicationAttemptId.newInstance(
@@ -222,7 +227,7 @@ public class TestContainerLauncher {
       containerLauncher.numEventsProcessing.get());
   }
 
-  @Test
+  @Test(timeout = 15000)
   public void testSlowNM() throws Exception {
 
     conf = new Configuration();
@@ -235,11 +240,19 @@ public class TestContainerLauncher {
     YarnRPC rpc = YarnRPC.create(conf);
     String bindAddr = "localhost:0";
     InetSocketAddress addr = NetUtils.createSocketAddr(bindAddr);
-    server = rpc.getServer(ContainerManagementProtocol.class, new DummyContainerManager(),
-        addr, conf, null, 1);
+    NMTokenSecretManagerInNM tokenSecretManager =
+        new NMTokenSecretManagerInNM();
+    MasterKey masterKey = Records.newRecord(MasterKey.class);
+    masterKey.setBytes(ByteBuffer.wrap("key".getBytes()));
+    tokenSecretManager.setMasterKey(masterKey);
+    conf.set(CommonConfigurationKeysPublic.HADOOP_SECURITY_AUTHENTICATION,
+      "token");
+    server =
+        rpc.getServer(ContainerManagementProtocol.class,
+          new DummyContainerManager(), addr, conf, tokenSecretManager, 1);
     server.start();
 
-    MRApp app = new MRAppWithSlowNM();
+    MRApp app = new MRAppWithSlowNM(tokenSecretManager);
 
     try {
     Job job = app.submit(conf);
@@ -340,8 +353,10 @@ public class TestContainerLauncher {
 
   private class MRAppWithSlowNM extends MRApp {
 
-    public MRAppWithSlowNM() {
+    private NMTokenSecretManagerInNM tokenSecretManager;
+    public MRAppWithSlowNM(NMTokenSecretManagerInNM tokenSecretManager) {
       super(1, 0, false, "TestContainerLauncher", true);
+      this.tokenSecretManager = tokenSecretManager;
     }
 
     @Override
@@ -353,18 +368,19 @@ public class TestContainerLauncher {
         public ContainerManagementProtocolProxyData getCMProxy(
             String containerMgrBindAddr, ContainerId containerId)
             throws IOException {
-          Token dummyToken =
-              Token.newInstance("NMTokenIdentifier".getBytes(),
-                  NMTokenIdentifier.KIND.toString(), "password".getBytes(),
-                  "NMToken");
+          InetSocketAddress addr = NetUtils.getConnectAddress(server);
+          String containerManagerBindAddr =
+              addr.getHostName() + ":" + addr.getPort();
+          Token token =
+              tokenSecretManager.createNMToken(
+                containerId.getApplicationAttemptId(),
+                NodeId.newInstance(addr.getHostName(), addr.getPort()), "user");
           ContainerManagementProtocolProxy cmProxy =
               new ContainerManagementProtocolProxy(conf, context.getNMTokens());
-          InetSocketAddress addr = NetUtils.getConnectAddress(server);
           ContainerManagementProtocolProxyData proxy =
               cmProxy.new ContainerManagementProtocolProxyData(
-                  YarnRPC.create(conf),
-                  addr.getHostName() + ":" + addr.getPort(), containerId,
-                  dummyToken);
+                YarnRPC.create(conf), containerManagerBindAddr, containerId,
+                token);
           return proxy;
         }
       };
